Modificação 13/05/2023 -- Adição Navbar/Icons/Animatições

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
+        android:id="@+id/bottom_home"
+        android:icon="@drawable/baseline_home_24"
+        android:title="Home"/>
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
+        android:id="@+id/bottom_trending"
+        android:icon="@drawable/baseline_local_fire_department_24"
+        android:title="Trending"/>
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
-
+        android:id="@+id/bottom_profile"
+        android:icon="@drawable/baseline_person_24"
+        android:title="Profile"
+        />
+    <item
+        android:id="@+id/bottom_favorite"
+        android:icon="@drawable/baseline_favorite_24"
+        android:title="Favorite"/>
+    <item
+        android:id="@+id/bottom_wishlist"
+        android:icon="@drawable/baseline_post_add_24"
+        android:title="WishList"/>
 </menu>
