--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".BookcaseActivity">
+    tools:context=".WishlistActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
