--- a/app/src/main/res/anim/slide_in_left.xml
+++ b/app/src/main/res/anim/slide_in_left.xml
@@ -3,5 +3,5 @@
     <translate
         android:duration = "400"
         android:fromXDelta="0"
-        android:toXDelta="100%dp"></translate>
+        android:toXDelta="100dp"></translate>
 </set>
